# RailwaySystem

./: .$高铁管理系统界面.drawio.bkp  .$高铁管理系统界面.drawio.dtmp  .$高铁管理系统界面.drawio_1.dtmp  .$高铁管理系统界面.png.dtmp  .gitignore  CMakeLists.txt  Login.qml  README.md  UML.mdj  accountmanager.cpp  accountmanager.h  admin.cpp  admin.h  bookingsystem.cpp  bookingsystem.h  bug.txt  city.cpp  city.h  date.cpp  date.h  images.qrc  main.cpp  main.qml  order.cpp  order.h  ordermanager.cpp  ordermanager.h  pageloader.cpp  pageloader.h  passenger.cpp  passenger.h  passengermanager.cpp  passengermanager.h  station.cpp  station.h  stationmanager.cpp  stationmanager.h  test.txt  time.cpp  time.h  (+13 more)
.VSCodeCounter/2025-11-20_22-46-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-11-28_23-37-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
data/: admin.txt  city.txt  order.txt  passenger.txt  passenger1.txt  station.txt  train.txt  train1.txt  user.txt
data_/: user.txt
exception/: accountexceptions.h
qml/: SessionState.qml  main.qml
qml/components/: AccountCard.qml  BasicScrollBar.qml  CheckButton.qml  ConfirmCancelDialog.qml  ConfirmDialog.qml  CustomButton.qml  Header.qml  MenuButton.qml  MyCalendar.qml  MyCheckBox.qml  OrderCard.qml  PassengerCard.qml  SearchBar.qml  SearchableComboBox.qml  SelectButton.qml  SideBar.qml  StationListView.qml  TicketCard.qml  TicketQueryCityCombox.qml  TimetableView.qml  TrainCard.qml  test.qml
qml/pages/: AccountManagement.qml  AddPassengerDialog.qml  AddPassingStationDialog.qml  AddUserDialog.qml  EditPassengerInfoDialog.qml  EditPassingStationDialog.qml  EditSeatTemplateDialog.qml  EditStationDialog.qml  Login.qml  MyOrders.qml  OrderConfirm.qml  OrderManagement.qml  PassengerInfo.qml  PersonalInfoDialog.qml  Profile.qml  RegisterDialog.qml  ResetPasswordDialog.qml  StationListDialog.qml  SubmitOrderDialog.qml  TicketQuery.qml  TicketQueryResult.qml  Timetable.qml  TimetableManagement.qml  TrainManagement.qml  TrainTimetableDialog.qml  (+1 more)
softwareTest/: 测试报告.aux  测试报告.dvi  测试报告.fdb_latexmk  测试报告.fls  测试报告.out  测试报告.tex  测试报告.toc  测试报告_fixed.tex  软件测试报告.aux  软件测试报告.fdb_latexmk  软件测试报告.fls  软件测试报告.tex  软件测试报告.toc  项目开发文档.tex
